--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,34 +2,34 @@
 
 body {
     font-family: "Georgia", Times, 'Times New Roman', serif;
-    color: #4aaaa5;
+    /* color: #4aaaa5; */
     background-image: url("../images/full-bloom.png");
     background-attachment: fixed;
 
 }
 
 header {
-    height: 43px;
-    background-color: #ffffff;
-    font-family: 'Georgia', Times, Times New Roman, serif;
-    width: 958px;
+    /* height: 43px;
+    background-color: #ffffff; */
+    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+    /* width: 958px;
     margin: auto;
     border-color: #cccccc;
     border-style: solid;
-    border-width: 1px;
+    border-width: 1px; */
     
   } 
   
-  header li {
+/*  header li {
     float: right;
     color: #777777;
     font-size: 15px;
     margin: auto;
     list-style-type: none;
     text-align: center;
-  } 
+  }  */
 
-header h2 {
+/* header h2 {
     color: #eeeeee;
     background-color: #008080;
     font-size: 18px;
@@ -54,9 +54,9 @@ header a:visited {
     text-decoration: none;
     padding: 12px 20px;
     text-align: center;
-}
+} */
 
-.form [type=text] {
+/* .form [type=text] {
   width: 100%;
   padding: 12px 20px;
   margin: 8px 0;
@@ -71,9 +71,9 @@ header a:visited {
     margin: 8px 0 10px 0;
     box-sizing: border-box;
   
-  }
+  } */
 
-.container a {
+/* .container a {
     padding: 8px;
     margin: 10px;
     background-color: #4aaaa5;
@@ -110,9 +110,9 @@ header a:visited {
     padding: 12px 20px;
     text-align: center;
     font-weight: bolder;
-}
+} */
 
-.title {
+/* .title {
     border-bottom: 1px solid #dddddd;
 }
 
@@ -121,8 +121,8 @@ header a:visited {
     font-size: 28px;
     padding: 2px;
     text-align: left;
-}
-
+} */
+/* 
 .container {
     width: 920px;
     margin-top: 70px;
@@ -143,9 +143,9 @@ header a:visited {
     margin: 10px;
     float: left;
     position: relative;
-}
+} */
 
-.portfolio-image {
+/* .portfolio-image {
    position: relative;
    text-align: center;
    color: #eeeeee;
@@ -153,20 +153,44 @@ header a:visited {
    float: left;
    margin: 20px;
    font-size: 28px;
-}
+} */
 
-.image-text {
+/* .image-text {
     position: absolute;
     bottom: 45px;
     margin: auto;
     left: 10px;
     background-color: #008080;
     width: 300px;
-}
-
+} */
+/* 
 h3 {
     font-size: 15px;
     color: #333333;
     padding: 0;
     margin: 0;
-}
+}  */
+
+@media (min-width: 576px) {
+    .container {
+      max-width: 540px;
+    }
+  }
+  
+@media (min-width: 768px) {
+    .container {
+      max-width: 720px;
+    }
+  }
+  
+@media (min-width: 992px) {
+    .container {
+      max-width: 960px;
+    }
+  }
+  
+@media (min-width: 1200px) {
+    .container {
+      max-width: 1140px;
+    }
+  }
